unpackaged/main/default/objects/Enterprise_Basis__c/Enterprise_Basis__c.object-meta.xml
<CustomObject>
    <label>Enterprise Basis</label>
    <nameField>
        <displayFormat>EB-{00000}</displayFormat>
        <label>Enterprise Basis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enterprise Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>