unpackaged/main/default/objects/Enterprise_Basis__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enterprise Basis</relationshipLabel>
    <relationshipName>Enterprise_Bases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>