unpackaged/main/default/objects/Enterprise_Basis__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Agreement Account must match the Enterprise Basis Account</errorMessage>
        <filterItems>
            <field>ServiceContract.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Enterprise Basis</relationshipLabel>
    <relationshipName>Enterprise_Bases</relationshipName>
    <type>Lookup</type>
</CustomField>