unpackaged/main/default/objects/Enterprise_Basis__c/fields/Basis__c.field-meta.xml
<CustomField>
    <fullName>Basis__c</fullName>
    <formula>TEXT(Account__r.Enterprise_License_Pricebook__r.Equivalent_Basis__c)</formula>
    <label>Basis</label>
    <type>Text</type>
</CustomField>